<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CirculoFragment">

    <EditText
        android:id="@+id/etRaio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:hint="@string/raio"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/btnAreaCirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAreaCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="53dp"
        android:text="@string/area"
        app:layout_constraintBottom_toTopOf="@+id/tvResCirculo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRaio" />

    <Button
        android:id="@+id/btnPerCirculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perimetro"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAreaCirculo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/btnAreaCirculo" />

    <TextView
        android:id="@+id/tvResCirculo"
        android:layout_width="228dp"
        android:layout_height="0dp"
        android:layout_marginBottom="271dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAreaCirculo" />
</androidx.constraintlayout.widget.ConstraintLayout>